test/parse/expr/bad-binary-one-expr.txt
;;; ERROR: 1
(module (func
   i32.const 0 
   i32.add))
(;; STDERR ;;;
out/test/parse/expr/bad-binary-one-expr.txt:4:4: error: type stack size too small at i32.add. got 1, expected at least 2
   i32.add))
   ^^^^^^^
out/test/parse/expr/bad-binary-one-expr.txt:4:4: error: type stack at end of function is 1, expected 0
   i32.add))
   ^^^^^^^
;;; STDERR ;;)
